--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="https://www.weistec.com/favicon.ico" type="image/x-icon">
-    <title>Year Make Model Interface</title>
+    <title>Year Make Model Generator</title>
 </head>
 <body>
 
@@ -41,6 +41,10 @@
 
     <button onclick="generateTemplate();">Generate</button>
     <button onclick="clearList();">Clear</button>
+
+    <p>
+        <a href="https://github.com/jvillacinda11/YearMakeModelGenerator">Source Code</a>
+    </p>
 
 
 
