source code opens in new tab

--- a/index.htm
+++ b/index.htm
@@ -43,7 +43,7 @@
     <button onclick="clearList();">Clear</button>
 
     <p>
-        <a href="https://github.com/jvillacinda11/YearMakeModelGenerator">Source Code</a>
+        <a href="https://github.com/jvillacinda11/YearMakeModelGenerator" target="_blank">Source Code</a>
     </p>
 
 
