--- a/index.htm
+++ b/index.htm
@@ -66,8 +66,8 @@
  <br>
 <div class="row g-4">
     <div class="col-12">
-        <button onclick="generateTemplate(event);">Generate</button>
-        <button onclick="clearList();">Clear</button>
+        <button type="button" class="btn btn-dark" onclick="generateTemplate(event);">Generate</button>
+        <button type="button" class="btn btn-dark" onclick="clearList();">Clear</button>
     </div>
 </div>
 
