changed output div to textarea

--- a/index.htm
+++ b/index.htm
@@ -59,9 +59,7 @@
                     
                 </form>
             </div>
-            <div class="col-9">
-                <p id="output"></p>
-            </div>
+            <textarea readonly="true" class="col-9" id="output" style="outline: none; resize: none; text-align: start; overflow: auto;"></textarea>
     </div>
  <br>
 <div class="row g-4">
