--- a/index.htm
+++ b/index.htm
@@ -6,14 +6,29 @@
     <link rel="shortcut icon" href="https://www.weistec.com/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Year Make Model Generator</title>
+    <style>
+        textarea{
+            outline: none;
+            overflow: auto;
+            resize: none;
+            min-height: 200px;
+            text-align: start;
+        }
+        @media screen and (max-width: 768px) {
+            textarea{
+                margin-top: 2rem!important;
+            }
+        }
+    </style>
+
 </head>
 <body>
 <br><br>
-
+<h1 class="text-center">Year Make Model Trim Engine Generator</h1>
 <div class="container">
     <div class="row">
 
-        <div class="col-3">
+        <div class="col-md-3">
         <form class="row g-1" onsubmit="generateTemplate(event);">
                 <div class="col-12">
                     <label class="form-label" for="initial-year">Intial Year:</label>
@@ -59,7 +74,7 @@
                     
                 </form>
             </div>
-            <textarea readonly="true" class="col-9" id="output" style="outline: none; resize: none; text-align: start; overflow: auto;"></textarea>
+            <textarea readonly="true" class="col-md-9" id="output"></textarea>
     </div>
  <br>
 <div class="row g-4">
