end of line option

--- a/index.htm
+++ b/index.htm
@@ -68,6 +68,16 @@
                         <label class="form-label" for="engine-name">Engine Name:</label>
                         <input class="form-control" type="text" id="engine-name" required>
                     </div>
+
+                    <div class="col-12">
+                        <br>
+                        <p>End of line option:</p>
+                        <input type="radio" name="eol" id="nl" value="nl" checked>
+                        <label class="form-label" for="nl">New Line</label>
+
+                        <input type="radio" name="eol" id="vert" value="vert">
+                        <label class="form-label" for="vert">|</label>
+                    </div>
             
                         
                     <input type="submit" style="display: none;">
